@@ -3221,6 +3221,8 @@ void DOS_EnableDriveMenu(char drv) {
 		mainMenu.get_item(name).enable(!dos_kernel_disabled && Drives[drv-'A'] != NULL && (drv-'A') != ZDRIVE_NUM).refresh_item(mainMenu);
 		name = std::string("drive_") + drv + "_rescan";
 		mainMenu.get_item(name).enable(!dos_kernel_disabled && Drives[drv-'A'] != NULL).refresh_item(mainMenu);
+		name = std::string("drive_") + drv + "_info";
+		mainMenu.get_item(name).enable(!dos_kernel_disabled && Drives[drv-'A'] != NULL).refresh_item(mainMenu);
 		if (drv == 'A' || drv == 'C' || drv == 'D') {
 			name = std::string("drive_") + drv + "_boot";
 			mainMenu.get_item(name).enable(!dos_kernel_disabled).refresh_item(mainMenu);
